# lexicont

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/lexicont/: agent.py  api.py  config_loader.py  logger.py  main.py  pipeline.py
src/lexicont/config/: moderation_config.yaml  moderation_config.yaml.bak  moderation_rules.v1.yaml
src/lexicont/filters/: fuzzy_trigger.py  llm_entry_judge.py  llm_entry_judge.py.bak  llm_judge.py  profanity_filter.py  toxicity_ml.py
src/lexicont/rag/: patterns.jsonl
